updated calculations for PR

--- a/app/views/exercisegroups/index.html.erb
+++ b/app/views/exercisegroups/index.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
-<div class="row">
-  <div class="col-md-6 col-sm-6 col-lg-6 offset-md-3 offset-3 offset-lg-3">
+<div class="container-fluid">
+  <div class="row-fluid">
+  <div class="col-sm-6 col-md-6 center-block text-center" style="float:none">
     <h1>Select Your PR!</h1>
 </div>
 </div>
@@ -8,12 +8,15 @@
 
 <% @exercisegroups.in_groups_of(2, false).each_with_index do | groups, index| %>
     <div class="list-group-horizontal">
-      <div class="row">
+      <div class="row-fluid">
       <% groups.each do | group | %>
-      <div class="col-md-6 col-sm-6 col-lg-6">
-        <%= link_to group, class: 'list-group-item list-group-item-action' do %>
+      <div class="col-md-6 col-sm-6 col-lg-6 text-center">
+
+
+        <%= link_to group, class: 'list-group-item list-group-item-action flex-column align-items-start' do %>
       <%= group.name %>
       <% end %>
+
     </div>
   <% end %>
 </div>
