--- a/app/views/exercisegroups/show.html.erb
+++ b/app/views/exercisegroups/show.html.erb
@@ -1,3 +1,6 @@
+<div class="container-fluid">
+  <div class="row-fluid">
+  <div class="col-sm-6 col-md-6 center-block text-center" style="float:none">
 <h1><%= @exercisegroup.name %></h1>
 </br>
 <%= form_for(Exerciselog.new) do |f| %>
@@ -6,9 +9,12 @@
     <%= f.text_field :weight, placeholder: "weight", class: "form-control", required: true %>
     <%= f.submit "submit", class: "btn btn-default" %>
   <% end %>
-</br>
-  <% @exercisegroup.exerciselog.each do |t| %>
-    <%=  t.weight %> </br>
-  <% end %>
-</br>
 <hr>
+<% if @top_exercise %>
+  <h2>PR: <%= @top_exercise.weight %>kg</h2>
+    <% @lift_percentage_returns.each_with_index do |e, index| %>
+      <%= e[0] %>% = <%= e[1].round(2) %>kg</br>
+    <% end %>
+<% end %>
+</div>
+</div></div>
